    - added myself to Uploaders
    - added Debian OSM Team to Uploaders
    - wrapped dependency fields (eases reading diffs in commits)
    - remove duplicate Section in libmapnik0.6
    - Standards-Version bumped to 3.8.4, no changes needed
    - fix Build-Dependencies:
      + bump debhelper version
      + use python-support instead of python-central
      + drop useless dependency on python
    - support Python >= 2.5
    - libmapnik0.6 → libmapnik0.7 because of SONAME bump
  * debian/watch updated to use new url
  * debian/rules:
    - added quilt infrastructure
    - rewritten to use dh7
    - handle multiple Python versions
  * debian/patches/:
    - 02-fix_FTBFS_binutils-gold.patch added (Closes: #555586)
  * debian/copyright, substitute (C) with © to make lintian happy
  * debian/mapnik-doc.doc-base added
  * debian/libmapnik-dev.dirs added
  * debian/*.1 moved to debian/manpages/
  * debian/compat bumped to 7

 -- David Paleino <dapal@debian.org>  Fri, 19 Feb 2010 23:58:55 +0100

mapnik (0.6.1-1) unstable; urgency=low

  * New upstream release (closes: #537802, #545887)
  * Add dependency on python-cairo to python-mapnik (closes: #538862)
  * Enable build of kismet plugin
  * Update Standards-Version (no changes)
  * Apply patch from mapnik trunk to fix linking against agg
  * Apply changeset 1340 from mapnik trunk to fix shapefile compiler
    options
  * Switch to unversioned boost
  * Bump Standards-Version (no changes)
  * Adjust versioned dep libmapnik-dev -> libmapnik0.6
  * Change libmapnik-dev from Architecture: all to any to satisfy
    strict versioned dependency requirements
  * Split out API docs and examples into a separate package to avoid
    archive bloat due to above

 -- Dominic Hargreaves <dom@earth.li>  Mon, 19 Oct 2009 23:28:32 +0100

mapnik (0.6.0-1) unstable; urgency=low

  * New upstream release (closes: #522823, #523190)
  * Update debian/build-svn-tarball.sh for next major release