@@ -4,6 +4,7 @@ Maintainer: Debian GIS Project <pkg-grass-devel@lists.alioth.debian.org>
 Uploaders: Debian OpenStreetMap Team <pkg-osm-maint@lists.alioth.debian.org>,
  David Paleino <dapal@debian.org>
 Build-Depends:
+ scons,
  python-support (>= 0.90.0~),
  debhelper (>= 7.0.50~),
  python-all-dev,
